# AppSmartInspector

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  feat-spec-2026-04-24  main.py  pyproject.toml  uv
.github/workflows/: test.yml
docs/: 2026-04-28-metric-aq-design.md  TODO.md  architecture-improvement-spec.md  bug-fixes-2026-04-28.md  call-stack-attribution-design.md  harmonyos-rebuild-research.md  harmonyos-support-plan.md  hdc-command-line-research.md  perfetto-comparison-analysis.md  perfetto-ui-bridge-design.md  sql-summarizer-and-verifier-spec.md  thread-state-blocking-analysis-design.md
docs/superpowers/plans/: 2026-04-05-architecture-improvements.md
perfetto-plugin/: build.sh
perfetto-plugin/com.smartinspector.Bridge/: index.ts
platform/android/: gradle.properties  gradlew  local.properties  settings.gradle
platform/android/app/: build.gradle
platform/android/tracelib/: build.gradle
prompts/: android-expert.txt  attributor.txt  code-explorer.txt  compaction.txt  frame-analyzer.txt  main.txt  metric-qa.txt  monkey-driver.txt  perf-analyzer.txt  reference-hdc-commands.txt  reference-opencode-prompts.txt  report-generator.txt
scripts/: si.sh
src/smartinspector/: cli.py  config.py  debug_log.py  graph.py  headless.py  perfetto_compat.py  prompts.py  token_tracker.py
src/smartinspector/agents/: android.py  attributor.py  deterministic.py  explorer.py  frame_analyzer.py  perf_analyzer.py  verifier.py
tests/: test_collector.py  test_high_priority_fixes.py  test_perfetto.py  test_summarizer_and_verifier.py
(+70 files in other folders)
