[project]
name = "smartinspector"
version = "0.1.0"
description = "AI-powered HarmonyOS performance analysis CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13,<3.0",
    "langchain-anthropic>=1.4.0,<2.0",
    "langchain-openai>=1.1.12,<2.0",
    "langgraph>=1.1.3,<2.0",
    "perfetto>=0.16.0,<1.0",
    "websockets>=16.0,<18.0",
    "prompt_toolkit>=3.0,<4.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.scripts]
smartinspector = "smartinspector.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
